# goodb

./: .gitignore  CMakeLists.txt  Procfile  README.md  main.cpp  test.cpp
Classes/: Execution.h  Folder.cpp  Folder.h  History.h  Macros.cpp  Macros.h  Project.cpp  Project.h  Tag.cpp  Tag.h  TagList.cpp  TagList.h  Task.cpp  Task.h  User.cpp  User.h
Client/: fake-backend.ts
Client/tm-app/: package-lock.json  package.json
Client/tm-app/src/app/: app.component.ts
Client/tm-app/src/app/dashboard/: dashboard.component.html  dashboard.component.ts
Client/tm-app/src/app/navbar/: navbar.component.html
Client/tm-app/src/app/navbar/task-search/: task-search.component.html
Client/tm-app/src/app/shared/: auth.service.ts
Client/tm-app/src/app/sign-in-form/: sign-in-form.component.html  sign-in-form.component.ts
Client/tm-app/src/app/sign-up-form/: sign-up-form.component.html  sign-up-form.component.ts
Client/tm-app/src/app/tasks/: tasks.component.html  tasks.component.ts
Client/tm-app/src/app/tasks/shared/: task.service.ts
Client/tm-app/src/app/tasks/task-detail/: task-detail.component.html  task-detail.component.ts
Model/: MockRepository.cpp  MockRepository.h  Repository.cpp  Repository.h
Model/DBRepo/: db.cpp  db.h
Model/NetRepo/: Net.cpp  Net.h
Model/TMApp/: CoreApp.h  Execution.cpp  Execution.h  Folder.cpp  Folder.h  History.cpp  History.h  Macros.h  MutuallyAttachable.cpp  MutuallyAttachable.h  Project.cpp  Project.h  TMApp.cpp  TMApp.h  Tag.cpp  Tag.h  Task.cpp  Task.h  User.cpp  User.h  sha256.cpp  sha256.h  utils.cpp  utils.h
Model/Test/: test.cpp
Server/: CMakeLists.txt  Controllers.cpp  Controllers.h  Server.cpp  Server.h  main.cpp
libs/: build_dependencies.sh  catch.hpp
server_service/: app_server.cpp  app_server.hpp  main.cpp
server_service/core/: basic_server.cpp  network_utils.cpp
server_service/core/include/: basic_server.hpp  http_server.hpp  network_utils.hpp  runtime_utils.hpp  std_htpp_server.hpp  usr_interrupt_handler.hpp
